change body to query
